fix dark mode

--- a/news-next/1.css
+++ b/news-next/1.css
@@ -18,7 +18,7 @@
   display: grid;
   gap: 9px;
   justify-items: left;
-  background-color: #fff;
+  background-color: var(--component-bg);
   padding: calc(var(--component-padding) * 0.75);
 }
 
